WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
62221
[Qt] Fix methods.html and methods-lower-case.html
https://bugs.webkit.org/show_bug.cgi?id=62221
Summary
[Qt] Fix methods.html and methods-lower-case.html
Robert Hogan
Reported
2011-06-07 11:16:07 PDT
[Qt] Fix methods.html and methods-lower-case.html
Attachments
Patch
(9.30 KB, patch)
2011-06-07 11:27 PDT
,
Robert Hogan
no flags
Details
Formatted Diff
Diff
Patch
(15.89 KB, patch)
2011-06-07 11:37 PDT
,
Robert Hogan
kling
: review+
kling
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Robert Hogan
Comment 1
2011-06-07 11:27:13 PDT
Created
attachment 96265
[details]
Patch
Robert Hogan
Comment 2
2011-06-07 11:37:13 PDT
Created
attachment 96268
[details]
Patch
Robert Hogan
Comment 3
2011-06-07 11:39:08 PDT
Fyi for the reviewer, this is how the Qt results for the unskipped methods-* tests compare to Mac: --- /tmp/layout-test-results/http/tests/xmlhttprequest/methods-expected.txt 2011-06-07 19:37:36.000000000 +0100 +++ /tmp/layout-test-results/http/tests/xmlhttprequest/methods-actual.txt 2011-06-07 19:37:36.000000000 +0100 @@ -4,17 +4,17 @@ GET(null): GET(null bytes), Content-Type: null GET("123"): GET(null bytes), Content-Type: null POST(""): POST(0 bytes), Content-Type: application/xml -POST(null): POST(0 bytes), Content-Type: null +POST(null): POST(0 bytes), Content-Type: application/octet-stream POST("123"): POST(3 bytes), Content-Type: application/xml PUT(""): PUT(0 bytes), Content-Type: application/xml PUT(null): PUT(0 bytes), Content-Type: null PUT("123"): PUT(3 bytes), Content-Type: application/xml -DELETE(""): DELETE(0 bytes), Content-Type: application/xml -DELETE(null): DELETE(0 bytes), Content-Type: null -DELETE("123"): DELETE(3 bytes), Content-Type: application/xml -HEAD(""): HEAD(0 bytes), Content-Type: null -HEAD(null): HEAD(0 bytes), Content-Type: null -HEAD("123"): HEAD(0 bytes), Content-Type: null +DELETE(""): DELETE(null bytes), Content-Type: null +DELETE(null): DELETE(null bytes), Content-Type: null +DELETE("123"): DELETE(null bytes), Content-Type: null +HEAD(""): HEAD(null bytes), Content-Type: null +HEAD(null): HEAD(null bytes), Content-Type: null +HEAD("123"): HEAD(null bytes), Content-Type: null WKFOOBAR(""): WKFOOBAR(0 bytes), Content-Type: application/xml WKFOOBAR(null): WKFOOBAR(0 bytes), Content-Type: null WKFOOBAR("123"): WKFOOBAR(3 bytes), Content-Type: application/xml The differences are described in the Changelog. This bug is a relative of
https://bugs.webkit.org/show_bug.cgi?id=60440
so cc'ing Luiz and Adam.
Luiz Agostini
Comment 4
2011-06-08 13:04:52 PDT
Comment on
attachment 96268
[details]
Patch I am not an official reviewer but it LGTM.
Andreas Kling
Comment 5
2011-06-09 13:10:14 PDT
Comment on
attachment 96268
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=96268&action=review
r=me
> Source/WebCore/platform/network/qt/QNetworkReplyHandler.cpp:601 > +void QNetworkReplyHandler::clearContentsHeaders()
clearContentHeaders()
> Source/WebCore/platform/network/qt/QNetworkReplyHandler.cpp:603 > + // Clearing Contents-length and Contents-type of the requests that do not have contents.
Content-length and Content-type
> Source/WebCore/platform/network/qt/QNetworkReplyHandler.cpp:613 > + // We may be uploading files so prevent QNR from buffering data
Period at end of Kenneth.
Robert Hogan
Comment 6
2011-06-12 04:52:35 PDT
Committed
r88612
: <
http://trac.webkit.org/changeset/88612
>
Robert Hogan
Comment 7
2011-06-25 03:03:20 PDT
***
Bug 60566
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug